internal-gateway/i-gw-httproute-header-modify.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-httproute-header-rewrite
  labels:
    gateway: internal-gateway
spec:
  hostnames:
    - "i-gw.gcpx.org"
  rules:
    - forwardTo:
        - serviceName: whereami-v1
          port: 8080
    - matches:
        - headers:
            type: Exact
            values:
              env: v2
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              my-header: hello
            remove:
              - my-header
      forwardTo:
        - serviceName: whereami-v2
          port: 8080
